# 3DGameCpp

./: .gitignore  .gitmodules  CppGameEngine.sln  makeSln.bat  premake5.lua
BrickSmashing3D/: CMakeLists.txt
BrickSmashing3D/Src/: Application.cpp  Camera.cpp  Camera.h  Common.h  DepthMap.h  IndexModel.cpp  InputManager.cpp  LevelLoader.h  Model.cpp  Model.h  OBJ_Loader.h  ObjReader.cpp  ObjReader.h  Platform.cpp  Platform.h  Player.cpp  Player.h  RenderTarget.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UIRenderer.h
BrickSmashing3D/Src/lighting/: DirectionalLight.cpp  DirectionalLight.h
BrickSmashing3D/res/: Main.shader  platform.blend  player.blend  player.blend1  sponza.mtl  test.file
CppGameEngine/: CMakeLists.txt  premake5.lua
CppGameEngine/Src/: Application.cpp  Common.h  DepthMap.cpp  DepthMap.h  DirectoryInspector.h  FrameBuffer.cpp  FrameBuffer.h  GameObject.h  IndexModel.h  Model.cpp  Model.h  Raycast.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UIRenderer.cpp
CppGameEngine/Src/lighting/: DirectionalLight.cpp  DirectionalLight.h
CppGameEngine/res/: BlurShader.glsl  DepthMap.shader  FinalScreen.glsl  Main.glsl  test.mtl
Dependencies/Glad/bin-int/Debug-windows-x86_64/Glad/: Glad.idb
Dependencies/Glad/bin-int/Debug-windows-x86_64/Glad/Glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Engine/: Engine.vcxproj  Engine.vcxproj.filters  imgui.ini
Engine/Src/: Application.cpp  Camera.cpp  Common.h  DirectoryInspector.h  GameObject.cpp  Shader.cpp
Engine/Src/lighting/: DirectionalLight.cpp
bin-int/Debug-windows-x86_64/Engine/: vc142.idb
bin-int/Debug-windows-x86_64/Engine/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
